--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,44 @@
-alembic==1.4.3
-click==7.1.2
-Flask==1.1.2
-Flask-Migrate==2.5.3
-Flask-SQLAlchemy==2.4.4
-gunicorn==19.10.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-Mako==1.1.3
-MarkupSafe==1.1.1
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.4.2
+backports.functools-lru-cache==1.6.1
+beautifulsoup4==4.9.3
+caniusepython3==7.2.0
+certifi==2020.6.20
+chardet==3.0.4
+coverage==5.3
+distlib==0.3.1
+Django==3.1.2
+django-bootstrap4==2.3.1
+django-crispy-forms==1.9.2
+djangorestframework==3.12.1
+filelock==3.0.12
+future==0.18.2
+idna==2.10
+importlib-metadata==2.0.0
+importlib-resources==3.0.0
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mypy==0.790
+mypy-extensions==0.4.3
+packaging==20.4
+Pillow==8.0.0
+pluggy==0.13.1
 psycopg2==2.8.6
-python-dateutil==2.8.1
-python-dotenv==0.14.0
-python-editor==1.0.4
+py==1.9.0
+pylint==2.6.0
+pyparsing==2.4.7
+pytz==2020.1
+requests==2.24.0
 six==1.15.0
-SQLAlchemy==1.3.19
-typing==3.7.4.3
-Werkzeug==1.0.1
+soupsieve==2.0.1
+sqlparse==0.4.1
+toml==0.10.1
+tox==3.20.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.10
+virtualenv==20.0.35
+wrapt==1.12.1
+zipp==3.3.1
