--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,16 @@ beautifulsoup4==4.9.3
 caniusepython3==7.2.0
 certifi==2020.6.20
 chardet==3.0.4
+confusable-homoglyphs==3.2.0
 coverage==5.3
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.2
 django-bootstrap4==2.3.1
 django-crispy-forms==1.9.2
+django-heroku==0.3.1
+django-registration==3.1.1
+django-tinymce==3.1.0
 djangorestframework==3.12.1
 filelock==3.0.12
 future==0.18.2
@@ -29,6 +34,7 @@ psycopg2==2.8.6
 py==1.9.0
 pylint==2.6.0
 pyparsing==2.4.7
+python-decouple==3.1
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
@@ -40,5 +46,6 @@ typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.25.10
 virtualenv==20.0.35
+whitenoise==5.2.0
 wrapt==1.12.1
 zipp==3.3.1
